panel: Fix crash when starting launcher

Do not destroy a widget in its draw signal. This is bad. Really.

This was happening in the animation that is being drawn after clicking a
launcher.

https://bugzilla.gnome.org/show_bug.cgi?id=641325